--- a/.classpath
+++ b/.classpath
@@ -1,30 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="demo/src"/>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="demo/dist/demo.jar"/>
-	<classpathentry kind="lib" path="dist/JavaPlot.jar"/>
-	<classpathentry kind="lib" path="xtra/svgSalamander.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="output" path="bin"/>
-</classpath>
-<?xml version="1.0" encoding="UTF-8"?>
-<classpath>
-	<classpathentry kind="src" path="demo/src"/>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="demo/dist/demo.jar"/>
-	<classpathentry kind="lib" path="dist/JavaPlot.jar"/>
-	<classpathentry kind="lib" path="xtra/svgSalamander.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="output" path="bin"/>
-</classpath>
-<?xml version="1.0" encoding="UTF-8"?>
-<classpath>
-	<classpathentry kind="src" path="demo/src"/>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="demo/dist/demo.jar"/>
-	<classpathentry kind="lib" path="dist/JavaPlot.jar"/>
-	<classpathentry kind="lib" path="xtra/svgSalamander.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="output" path="bin"/>
+  <classpathentry kind="src" path="src/main/java" including="**/*.java"/>
+  <classpathentry kind="output" path="target/classes"/>
+  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 </classpath>
